data/derived/comb/progs/unify/prog4592.ml.out
Characters 85-94:
  let fixpoint (f,b) = wwhile ((let f f b = if f b = (b,true) && (b,true)=f (b-1) then (b,false) in f),b);;
                                                                                       ^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type unit
